# face2mbti

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: config.py  main.py  task_manager.py
app/static/: index.html  result.html  result.js  script.js  style.css  video.css  video.html  video.js
app/utils/: video_processor.py
app/workflow/: graph.py  state.py  video_graph.py
app/workflow/nodes/: face_analysis.py  image_input.py  mbti_judge.py  result_format.py  video_input.py
